# osu-fy

./: S5.py  istrm.py  model.py  train.py
audio-decode/: Cargo.toml  pyproject.toml
audio-decode/src/: lib.rs
